[package]
name = "mconfig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_with = { version = "2", features = [] }
mongodb = { version = "2", features = [] }
tokio = { version = "1", features = [] }
futures = "0"